SPANISH: Spanish RM 2.2 UI Bundle based on EN rev71684
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@73624 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/config/components/fileplan/events.get_es.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/config/components/fileplan/events.get_es.properties
@@ -3,18 +3,18 @@ title.completedEvents=Completado
 title.incompleteEvents=Incompleto
 title.completeEvent=Completar evento
 message.completingEvent=Completando evento
-message.completeEventFailure=No se ha podido completar el evento
+message.completeEventFailure=No se pudo completar el evento
 message.revokingEvent=Revocando evento
-message.revokeEventFailure=No se ha podido revocar el evento
+message.revokeEventFailure=No se pudo recovar evento
 label.automatic=Autom\u00e1tico
 label.manual=Manual
 label.completedBy=Completado por
 label.completedAt=Completado el
 label.asOf=Fecha de inicio
-label.noDispositionSchedule=El ciclo de vida de la disposici\u00f3n no existe.
+label.noDispositionSchedule=No existe ciclo de vida de disposici\u00f3n
 label.noEventsInDispositionSchedule=No hay eventos para el paso ''{0}''.
-label.completeDispositionSchedule=Ciclo de vida de la disposici\u00f3n completado.
-label.dispositionScheduleAppliedToFolder=Planificaci\u00f3n de disposici\u00f3n aplicada a la carpeta de archivo padre, con fecha de inicio: {0}.
-label.linkToFoldersDispositionSchedule=Ver eventos de la carpeta padre
+label.completeDispositionSchedule=Ciclo de vida de disposici\u00f3n completado.
+label.dispositionScheduleAppliedToFolder=Planificaci\u00f3n de disposici\u00f3n aplicado a la carpeta de documentos de archivo padre, con fecha de inicio: ''{0}''.
+label.linkToFoldersDispositionSchedule=Ver eventos de carpeta padre
 label.loadFailure=No se pudieron cargar los eventos
 button.completeEvent=Completar evento
