--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/audit/audit.get_es.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/audit/audit.get_es.properties
@@ -1,7 +1,7 @@
 label.title=Registro de auditor\u00edas
-label.title-for=Registro de auditor\u00edas para {0}
-label.from=Desde
-label.to=Hasta
+label.title-for=Registro de auditor\u00edas para ''{0}''
+label.from=De
+label.to=Para
 
 label.yes=S\u00ed
 label.no=No
@@ -10,21 +10,21 @@ button.view-record=Ver documento de archivo
 
 label.clear-log-title=\u00bfBorrar registro de auditor\u00edas?
 label.clear-log-confirmation=\u00bfEst\u00e1 seguro de que desea borrar el registro de auditor\u00edas?
-label.clearing-log-message=Espere, borrando registro de auditor\u00edas.
+label.clearing-log-message=Espere, el registro de auditor\u00edas se est\u00e1 borrando.
 label.cleared-log-message=Registro de auditor\u00edas borrado.
 message.clear-log-fail = Error al borrar el registro de auditor\u00edas.
 
 label.stopped-at=Registro de auditor\u00edas detenido en {0}
 label.stop-log-title=\u00bfDetener registro de auditor\u00edas?
-label.stop-log-confirmation=\u00bfEst\u00e1 seguro de que quiere detener el registro de auditor\u00edas?
-label.stopping-log-message=Espere, deteniendo registro de auditor\u00edas.
+label.stop-log-confirmation=\u00bfEst\u00e1 seguro de que desea detener el registro de auditor\u00edas?
+label.stopping-log-message=Espere, el registro de auditor\u00edas se est\u00e1 deteniendo.
 label.stopped-log-message=Registro de auditor\u00edas detenido.
 message.stop-log-fail = Error al detener el registro de auditor\u00edas.
 
 label.started-at=Registro de auditor\u00edas iniciado en {0}
 label.start-log-title=\u00bfIniciar registro de auditor\u00edas?
-label.start-log-confirmation=\u00bfEst\u00e1 seguro de que quiere iniciar el registro de auditor\u00edas?
-label.starting-log-message=Espere, iniciando registro de auditor\u00edas.
+label.start-log-confirmation=\u00bfEst\u00e1 seguro de que desea iniciar el registro de auditor\u00edas?
+label.starting-log-message=Espere, el registro de auditor\u00edas se est\u00e1 iniciando.
 label.started-log-message=Registro de auditor\u00edas iniciado.
 message.start-log-fail = Error al iniciar registro de auditor\u00edas.
 
@@ -51,7 +51,10 @@ label.role=Rol
 label.event=Evento
 label.all=Todos
 label.identifier=Identificador
-label.no-previous=<ninguno>
+label.no-previous=<Ninguno>
 
 node.root=Plan de ficheros
 title.single=Seleccionar ubicaci\u00f3n del documento de archivo de auditor\u00edas
+
+label.select.recordfolder.title=Seleccionar carpeta de documentos de archivo
+label.select.recordfolder.text=Seleccione una carpeta de documentos de archivo
