--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-events.get_es.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-events.get_es.properties
@@ -11,10 +11,10 @@ button.newevent=Nuevo evento
 message.confirm.removeevent.title=Eliminar evento
 message.confirm.removeevent.text=\u00bfEst\u00e1 seguro de que desea eliminar ''{0}''?
 message.removeevent.success=Evento eliminado correctamente.
-message.removeevent.failure=No se pudo eliminar el evento.
+message.removeevent.failure=No se pudo elminar el evento.
 message.saveevent.saving=Guardando evento...
-message.loadevent.failure=No se pudieron cargar datos para el evento.
+message.loadevent.failure=No se pudieronc argas los datos para el evento.
 message.loadevents.failure=No se pudieron cargar los eventos.
 message.loadevents.loading=Cargando eventos...
 message.empty=No existen eventos.
-message.error=No se han podido cargar los eventos.
+message.error=No se pudieron cargar los eventos.
