--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-user-rights.get_es.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-user-rights.get_es.properties
@@ -1,5 +1,5 @@
 label.user-rights=Derechos de usuario
-label.userid=Id de usuario
+label.userid=Identificador de usuario
 label.roles=Roles
 label.groups=Grupos
 label.name=Nombre
