--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/rule-edit.get_es.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/rule-edit.get_es.properties
@@ -1,4 +1,4 @@
-form.required.fields=Campos necesarios
+form.required.fields=Campos requeridos
 header.newRule=Nueva regla
 header.editRule=Editar regla
 header.general=General
@@ -6,19 +6,19 @@ header.defineRule=Definir regla
 header.otherOptions=Otras opciones
 label.title=Nombre
 label.description=Descripci\u00f3n
-label.disabled=Desactivar regla
+label.disabled=Deshabilitar regla
 label.executeAsynchronously=Ejecutar regla en segundo plano
-label.applyToChildren=La regla se aplica a subcarpetas
-label.scriptRef=Si se produce un error, ejecute el script
+label.applyToChildren=Regla que se aplica a las subcarpetas
+label.scriptRef=Si se producen errores ejecutar scripts
 label.selectScript=Seleccionar...
-label.and=Se han cumplido todos los criterios
-label.or=Se ha cumplido cualquier criterio
+label.and=Se cumplen todos los criterios
+label.or=Se cumple cualquier criterio
 header.when=Cuando
 header.if=Si
 header.unless=A menos que
 header.action=Realizar acci\u00f3n
-message.creating=Creando regla...
-message.updating=Actualizando regla...
-message.persist-failure=No se pudo mantener la regla
-message.createAnotherRule=Regla creada correctamente 
+message.creating=Creando la regla...
+message.updating=Actualizando la regla...
+message.persist-failure=No se pudo persistir con la regla
+message.createAnotherRule=Regla creada correctamente. 
 message.loading=Cargando el plan de ficheros...
