--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/search/search.get_es.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/search/search.get_es.properties
@@ -1,4 +1,4 @@
-﻿message.loading=Cargando...
+message.loading=Cargando...
 message.empty=Ning\u00fan resultado encontrado.
 message.error=Error durante la b\u00fasqueda
 message.foundresults=Se encontraron {0} elemento(s).
@@ -8,13 +8,13 @@ message.selectdate=Seleccionar fecha
 
 
 message.deletesearch.title=Eliminar b\u00fasqueda
-message.deletesearch.description=\u00bfEst\u00e1 seguro de que quiere eliminar la b\u00fasqueda ''{0}''?
+message.deletesearch.description=\u00bfEst\u00e1 seguro de que desea eliminar la b\u00fasqueda ''{0}''?
 message.deletesearch.success=B\u00fasqueda eliminada correctamente.
 message.deletesearch.failure=No se pudo eliminar la b\u00fasqueda.
 
 label.searchtitle=Buscar
 label.searchterm=Texto de consulta
-label.criteria=Criterios
+label.criteria=Criteria
 label.results=Resultados
 label.insertfield=Insertar campo
 label.select=Seleccionar...
@@ -23,9 +23,9 @@ label.insertdate=Insertar fecha
 label.records=Mostrar documentos de archivo (solo completados)
 label.undeclared=Incluir incompletos
 label.vital=Mostrar solo vitales
-label.recordFolders=Mostrar carpetas de archivos
+label.recordFolders=Mostrar carpetas de documentos de archivo
 label.recordCategories=Mostrar categor\u00edas de documentos de archivo
-label.frozen=Mostrar solo congelados (excluidos cuando no est\u00e1n seleccionados)
+label.frozen=Mostrar solo en espera (excluidos cuando no est\u00e1n seleccionados)
 label.cutoff=Mostrar solo interrumpidos
 
 button.newsearch=Nueva b\u00fasqueda
@@ -35,6 +35,7 @@ button.deletesearch=Eliminar b\u00fasqueda
 button.print=Dise\u00f1o de impresi\u00f3n
 button.screen=Dise\u00f1o de pantalla
 button.export=Exportar
+button.add-to-hold=A\u00f1adir a bloqueo
 
 # RM Results Common
 label.options=Opciones de resultados
