--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/modules/documentlibrary/export.get_es.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/modules/documentlibrary/export.get_es.properties
@@ -1,4 +1,4 @@
 header=Exportar
-label.transferFormat=Seleccione el formato de fichero para la exportaci\u00f3n:
-label.acp=Paquete de contenido de Alfresco (ACP)
+label.transferFormat=Seleccionar el formato de fichero para exportar:
+label.acp=Fichero de paquete de contenidos de Alfresco (.acp)
 label.zip=ZIP
