--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/config/components/document-details/document-references.get_es.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/config/components/document-details/document-references.get_es.properties
@@ -1,7 +1,7 @@
 label.heading=Referencias
 label.manage-references=Gestionar
 message.no-messages=No existen referencias
-label.birelationship={0} desde {1}
-label.parentrelationshp={0}
-label.references-from-this=A otros documentos de archivo
-label.references-to-this=Desde otros documentos de archivo
+label.birelationship=''{0}'' de ''{1}''
+label.parentrelationshp=''{0}''
+label.references-from-this=Para otros documentos de archivo
+label.references-to-this=De otro documentos de archivo
