--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-audit.get_es.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-audit.get_es.properties
@@ -1,4 +1,4 @@
-﻿label.header-title=Auditor\u00eda
+label.header-title=Auditor\u00eda
 
 label.yes=S\u00ed
 label.no=No
@@ -8,21 +8,21 @@ button.view-record=Ver documento de archivo
 
 label.clear-log-title=\u00bfBorrar registro de auditor\u00edas?
 label.clear-log-confirmation=\u00bfEst\u00e1 seguro de que desea borrar el registro de auditor\u00edas?
-label.clearing-log-message=Espere, borrando registro de auditor\u00edas.
+label.clearing-log-message=Espere, el registro de auditor\u00edas se est\u00e1 borrando.
 label.cleared-log-message=Registro de auditor\u00edas borrado.
 message.clear-log-fail = Error al borrar el registro de auditor\u00edas.
 
 label.stopped-at=Registro de auditor\u00edas detenido en {0}
 label.stop-log-title=\u00bfDetener registro de auditor\u00edas?
-label.stop-log-confirmation=\u00bfEst\u00e1 seguro de que quiere detener el registro de auditor\u00edas?
-label.stopping-log-message=Espere, deteniendo registro de auditor\u00edas.
+label.stop-log-confirmation=\u00bfEst\u00e1 seguro de que desea detener el registro de auditor\u00edas?
+label.stopping-log-message=Espere, el registro de auditor\u00edas se est\u00e1 deteniendo.
 label.stopped-log-message=Registro de auditor\u00edas detenido.
 message.stop-log-fail = Error al detener el registro de auditor\u00edas.
 
 label.started-at=Registro de auditor\u00edas iniciado en {0}
 label.start-log-title=\u00bfIniciar registro de auditor\u00edas?
-label.start-log-confirmation=\u00bfEst\u00e1 seguro de que quiere iniciar el registro de auditor\u00edas?
-label.starting-log-message=Espere, iniciando registro de auditor\u00edas.
+label.start-log-confirmation=\u00bfEst\u00e1 seguro de que desea iniciar el registro de auditor\u00edas?
+label.starting-log-message=Espere, el registro de auditor\u00edas se est\u00e1 iniciando.
 label.started-log-message=Registro de auditor\u00edas iniciado.
 message.start-log-fail = Error al iniciar registro de auditor\u00edas.
 message.select-from-date=Seleccionar desde la fecha
@@ -49,25 +49,25 @@ label.event=Evento
 label.filter-log-title=\u00bfFiltrar registro?
 label.filtering-log-message=Filtrando registro
 label.default-filter=Todos los usuarios
-label.pagination=Mostrando las \u00faltimas {0} entradas del registro
+label.pagination=Mostrando las \u00faltimas ''{0}'' entradas del registro
 label.show-log-for=Mostrar registro para:
 label.all-users=Todos los usuarios
 label.remove-filter=Eliminar filtro
-label.default-message=Haga clic en ''Aplicar'' para ver el registro de auditor\u00edas
+label.default-message=Haga clic en "Aplicar" para ver el registro de auditor\u00edas
 
 node.root=Plan de ficheros
 title.single=Seleccionar ubicaci\u00f3n del documento de archivo de auditor\u00edas
 
 label.header-users=Usuarios
 label.header-entries=N\u00famero de entradas
-label.header-from=Desde
+label.header-from=De
 label.header-to=Para
 label.header-event=Evento
 label.header-property=Propiedad
 
-label.dialog-title=Detalles de evento {0}
+label.dialog-title=Detalles de evento ''{0}''
 label.property=Propiedad
 label.previous-value=Valor anterior
 label.new-value=Nuevo valor
 
-message.load-peopleFinder-failure=No se pudo cargar el componente ''Buscador de personas''
+message.load-peopleFinder-failure=No se pudo cargar el componente "Buscador de personas"
