--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-define-roles.get_es.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-define-roles.get_es.properties
@@ -1,8 +1,8 @@
-message.get-roles-failure=No se pudieron recuperar los roles de usuario: {0}
-message.get-role-failure=No se pudieron recuperar las capacidades del role: {0}
-message.delete.success=Rol eliminado correctamente.
+message.get-roles-failure=No se pudieron recuperar los roles de usuario: ''{0}''
+message.get-role-failure=No se pudieron recuperar las capacidades para el rol: ''{0}''
+message.delete.success=Usuario eliminado correctamente.
 message.delete.failure=No se pudo eliminar el rol.
-message.edit-success=Rol actualizado correctamente.
+message.edit-success=Usuario actualizado correctamente.
 message.edit-failure=No se pudo actualizar el rol.
 message.create-success=Rol creado correctamente.
 message.create-failure=No se pudo crear el rol.
@@ -24,4 +24,4 @@ label.cancel=Cancelar
 label.save=Guardar
 
 label.confirm-delete-title=Eliminar confirmaci\u00f3n de rol
-label.confirm-delete-message=\u00bfEst\u00e1 seguro de que quiere eliminar este rol?
+label.confirm-delete-message=\u00bfEst\u00e1 seguro de que desea eliminar este rol?
