--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-list-of-values.get_es.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-list-of-values.get_es.properties
@@ -1,5 +1,5 @@
-﻿label.view-listofvalues-title=Listas
-label.edit-listofvalue-title=Editar lista: {0}
+label.view-listofvalues-title=Listas
+label.edit-listofvalue-title=Editar lista: ''{0}''
 label.values=Valores
 label.access=Acceso
 
@@ -16,15 +16,15 @@ message.deletelist.failure=Error al eliminar lista.
 message.loading.lists=Cargando lista de valores\u2026
 message.loading.values=Cargando valores\u2026
 message.loading.access=Cargando acceso\u2026
-message.empty.lists=Haga clic en 'Nueva lista' para crear una lista.
-message.empty.values=Introduzca un valor en el campo de texto y haga clic en 'A\u00f1adir'.
-message.empty.access=Haga clic en 'A\u00f1adir' para dar acceso al valor a un grupo o usuario.
+message.empty.lists=Haga clic en "Nueva lista" para crear una lista.
+message.empty.values=Introduzca un valor en el campo de texto y haga clic en "A\u00f1adir".
+message.empty.access=Haga clic en "A\u00f1adir" para dar acceso al valor a un grupo o usuario.
 message.error=No se pudieron cargar los datos.
 message.addvalue.failure=No se pudo a\u00f1adir el valor ''{0}''
 message.addlist.failure.title=Error al a\u00f1adir lista
-message.addlist.failure.text=No se pudo a\u00f1adir la lista {0}
+message.addlist.failure.text=No se pudo a\u00f1adir la lista: ''{0}''
 message.renamelist.failure.title=Error al cambiar el nombre a la lista
-message.renamelist.failure.text=No se pudo cambiar el nombre a la lista {0}
+message.renamelist.failure.text=No se pudo cambiar el nombre a la lista: ''{0}''
 message.confirm.removevalue.title=Eliminar valor
 message.confirm.removevalue.text=\u00bfEst\u00e1 seguro de que desea eliminar ''{0}''?
 message.deletevalue.failure=Error al eliminar valor.
