--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-references.get_es.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-references.get_es.properties
@@ -1,12 +1,12 @@
-label.view-references-title=Enlazar relaciones
-label.title.parentchild={0}, {1}
+label.view-references-title=Enlace de relaciones
+label.title.parentchild=''{0}'', ''{1}''
 label.create-references-title=Nueva relaci\u00f3n
 label.edit-references-title=Editar relaci\u00f3n
 label.general=General
 label.type=Tipo
 label.bidirectional=Bidireccional
 label.label=Etiqueta
-label.parentchild=Padre/secundario
+label.parentchild=Padre/hijo
 label.source=Origen
 label.target=Destino
 
@@ -14,11 +14,11 @@ button.newreference=Nueva relaci\u00f3n
 
 message.confirm.removereference.title=Eliminar relaci\u00f3n
 message.confirm.removereference.text=\u00bfEst\u00e1 seguro de que desea eliminar ''{0}''?
-message.confirm.removereference.text.parentchild=\u00bfEst\u00e1 seguro de que desea eliminar ''{0}, {1}''?
+message.confirm.removereference.text.parentchild=\u00bfEst\u00e1 seguro de que desea eliminar ''{0}'',''{1}''?
 message.removereference-success=Referencia eliminada correctamente.
 message.removereference-failure=No se pudo eliminar la relaci\u00f3n.
-message.savingReference=Guardando relaci\u00f3n\u2026
-message.loadreference-failure=No se pudieron cargar datos para la relaci\u00f3n.
-message.loading=Cargando relaciones\u2026
+message.savingReference=Guardando relaci\u00f3n...
+message.loadreference-failure=No se pudieron cargar los datos para la relaci\u00f3n.
+message.loading=Cargando relaciones...
 message.empty=No existen relaciones.
 message.error=No se pudieron cargar las relaciones.
