--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/documentlibrary/savedsearch.get_es.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/documentlibrary/savedsearch.get_es.properties
@@ -1,4 +1,4 @@
-﻿## Title
+## Title
 header.savedsearch=B\u00fasquedas guardadas
 
 rm.savedsearch.vitalRecordsName=Documentos de archivo vitales pendientes de revisi\u00f3n
@@ -7,14 +7,14 @@ rm.savedsearch.vitalRecordsDesc=Todos los documentos de archivo pendientes de re
 rm.savedsearch.incompleteRecordsName=Documentos de archivo incompletos
 rm.savedsearch.incompleteRecordsDesc=Todos los documentos de archivo incompletos.
 
-rm.savedsearch.cutoffRecordsName=Documentos de archivo que se pueden interrumpir
-rm.savedsearch.cutoffRecordsDesc=Todos los documentos de archivo que se pueden interrumpir.
+rm.savedsearch.cutoffRecordsName=Documentos de archivo y carpetas de documentos de archivo que se pueden interrumpir
+rm.savedsearch.cutoffRecordsDesc=Todos los documentos de archivos y carpetas de documentos de archivos que se pueden interrumpir actualmente.
 
-rm.savedsearch.transferRecordsName=Documentos de archivo que se pueden transferir
-rm.savedsearch.transferRecordsDesc=Todos los documentos de archivo que se pueden transferir.
+rm.savedsearch.transferRecordsName=Documentos de archivo y carpetas de documentos de archivo que se pueden transferir
+rm.savedsearch.transferRecordsDesc=Todos los documentos de archivo y carpetas de documentos de archivo que se pueden transferir actualmente.
 
-rm.savedsearch.destructionRecordsName=Documentos de archivo que se pueden destruir
-rm.savedsearch.destructionRecordsDesc=Todos los documentos de archivo que se pueden destruir.
+rm.savedsearch.destructionRecordsName=Documentos de archivo y carpetas de documentos de archivo que se pueden destruir
+rm.savedsearch.destructionRecordsDesc=Todos los documentos de archivo y carpetas de documentos de archivo que se pueden destruir actualmente.
 
-rm.savedsearch.frozenRecordsName=Documentos de archivo congelados
-rm.savedsearch.frozenRecordsDesc=Todos los documentos de archivo congelados.
+rm.savedsearch.frozenRecordsName=Documentos de archivo y carpetas de documentos de archivo en espera
+rm.savedsearch.frozenRecordsDesc=Todos los documentos de archivo y carpetas de documentos de archivo en espera.
