--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/fileplan/disposition.get_es.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/fileplan/disposition.get_es.properties
@@ -9,14 +9,14 @@ label.appliedTo=Aplicado a
 label.appliedTo.record=Documento de archivo
 label.appliedTo.folder=Carpeta
 label.noactions=La planificaci\u00f3n de disposici\u00f3n no tiene acciones
-label.title.simple={0}
-label.title.noTime={0} {1}
-label.title.complex={0} despu\u00e9s de {1} {2}(s)
-label.nodescription=&lt;ninguno&gt;
+label.title.simple=''{0}''
+label.title.noTime=''{0}'' ''{1}''
+label.title.complex=''{0}'' despu\u00e9s de ''{1}'' ''{2}''(s)
+label.nodescription=&lt;Ninguno&gt;
 
 link.description=Ver descripci\u00f3n
 
 button.addevent=A\u00f1adir evento
 
-title.noDispositionSchedule=No se ha encontrado ninguna planificaci\u00f3n de disposici\u00f3n
+title.noDispositionSchedule=No se encontr\u00f3 ninguna planificaci\u00f3n de disposici\u00f3n
 button.createDispositionSchedule=Crear planificaci\u00f3n de disposici\u00f3n
