--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/fileplan/report.get_es.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/fileplan/report.get_es.properties
@@ -3,10 +3,10 @@ label.dateAndTime=Fecha y hora
 label.parentPath=Ruta
 label.recordSeriesIdentifier=Identificador de serie de documento de archivo
 label.recordCategoryIdentifier=Identificador de categor\u00eda de documentos de archivo
-label.recordFolderIdentifier=Identificador de carpeta de archivos
+label.recordFolderIdentifier=Identificador de carpeta de documentos de archivo
 label.vitalRecordIndicator=Indicador de documento de archivo vital
 label.dispositionAuthority=Autoridad de disposici\u00f3n
 label.noDispositionAuthority=Ninguno
 label.dispositionSchedule=Planificaci\u00f3n de disposici\u00f3n
-label.noActions=Sin pasos
-label.noActionDescription=(sin instrucciones)
+label.noActions=No hay pasos
+label.noActionDescription=(no hay instrucci\u00f3n)
