--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/permissions/permissions.get_es.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/permissions/permissions.get_es.properties
@@ -1,15 +1,15 @@
-message.getpermissionsfail=No se han podido recuperar los permisos del servidor.
+message.getpermissionsfail=No se pudieron recuperar los permisos del servidor.
 message.selectauthority=Seleccione un usuario o grupo
 message.authoritypickerfail=No se pudo cargar el componente Buscador de autoridad.
-message.finish-success=Permisos actualizados con \u00e9xito.
-message.finish-failure=No se han podido actualizar los permisos: {0}
+message.finish-success=Permisos actualizados correctamente.
+message.finish-failure=No se pudieron actualizar los permisos: ''{0}''
 
-label.title=Gestionar permisos: {0}
+label.title=Administrar permisos: ''{0}''
 label.inherit=Heredar permisos
-label.readonly=Solo lectura
+label.readonly=Solo leer
 label.readandfile=Leer y archivar
-label.inherited=heredado
-label.local=local
+label.inherited=Heredado
+label.local=Local
 label.permissions=Permisos
 label.actions=Acciones
 label.usersgroups=Usuarios y grupos
