--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/config/rule-config-action.get_es.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/config/rule-config-action.get_es.properties
@@ -1,5 +1,4 @@
-﻿header.action=Realizar acci\u00f3n:
-button.freeze=Congelar...
+header.action=Realizar acci\u00f3n:
 button.reject=Rechazar...
 button.requestInfo=Solicitar informaci\u00f3n...
 button.select-folder=Seleccionar...
@@ -8,21 +7,21 @@ button.addRecordTypes=Tipo de documento de archivo...
 menu.item.select=Seleccionar...
 
 label.setProperty.property=Establecer propiedad:
-label.setProperty.value=en:
+label.setProperty.value=a:
 
 dialog.destination.title=Seleccione la carpeta de destino
 
 ## Format used for date entry in date picker, 'entry' format is used by date parsing code,
 ## 'display' format is shown to the user under date entry field
-form.control.date-picker.entry.date.format=d/M/yyyy
-form.control.date-picker.display.date.format=DD/MM/YYYY
+form.control.date-picker.entry.date.format=dd/mm/aaaa
+form.control.date-picker.display.date.format=dd/mm/aaaa
 
 ## Format used for time entry in datetime picker, 'entry' format is used by date parsing code,
 ## 'display' format is shown to the user under time entry field
 form.control.date-picker.entry.time.format=HH:mm
 form.control.date-picker.display.time.format=HH:MM (24 horas)
 
-record.folder.path.title=Haga clic para mostrar texto de ayuda para el campo de la ruta de la carpeta de archivos.
+record.folder.path.title=Haga clic para mostrar texto de ayuda para el campo de la ruta de la carpeta de documentos de archivo.
 record.folder.path.help=<p>Las siguientes substituciones est\u00e1n permitidas:</p>\
    <p></p>\
    <p>date.day.short = Dom</p>\
