--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/rule-details.get_es.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/rule-details.get_es.properties
@@ -1,14 +1,14 @@
-label.disabled=Activo
+label.disabled=Activa
 label.executeAsynchronously=Ejecutar en segundo plano
-label.applyToChildren=Regla aplicada a subcarpetas
-label.and=Se han cumplido todos los criterios
-label.or=Se ha cumplido cualquier criterio
+label.applyToChildren=Regla aplicada a las subcarpetas
+label.and=Se cumplen todos los criterios
+label.or=Se cumple cualquier criterio
 header.when=Cuando
 header.if=Si
 header.unless=A menos que
 header.action=Realizar acci\u00f3n
 message.getRuleFailure=No se pudo cargar la informaci\u00f3n de la regla
-message.deletingRule=Eliminando regla...   
-message.confirm.delete.title=Eliminar regla
+message.deletingRule=Eliminando la regla...   
+message.confirm.delete.title=Eliminar la regla
 message.confirm.delete=\u00bfEst\u00e1 seguro de que desea eliminar la regla?
 message.loading=Cargando el plan de ficheros...
