--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/upload/html-upload.get_es.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/upload/html-upload.get_es.properties
@@ -6,7 +6,7 @@ section.recordType=Elegir tipo de documento de archivo
 section.file=Seleccionar fichero
 
 label.singleUploadTip=Con la \u00faltima versi\u00f3n instalada de Flash Player, puede subir m\u00faltiples ficheros. \
-  Desc\u00e1rguela del <a href="http://www.adobe.com/go/getflashplayer">Centro de Descargas de Adobe Flash Player</a>.
+  Desc\u00e1rguelo del <a href="http://www.adobe.com/go/getflashplayer">Centro de Descargas de Adobe Flash Player</a>.
 
 label.singleUpdateTip=Subir una nueva versi\u00f3n de {0}
 button.upload=Subir fichero
@@ -25,5 +25,5 @@ message.failure=No se pudo subir el documento
 label.contentType=Tipo de contenido
 type.cm_content=Contenido
 
-label.recordType=Tipos de documentos de archivo
+label.recordType=Tipo(s) de documento de archivo
 recordType.default=Predeterminado
