--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/modules/documentlibrary/copy-move-link-file-to.get_es.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/modules/documentlibrary/copy-move-link-file-to.get_es.properties
@@ -1,42 +1,46 @@
 ## Common
-header=Elegir carpeta de destino
+header=Elija la carpeta de destino
 
 ## Copy To
 copy.node.root=Plan de ficheros
-copy.title.single=Copiar {0} en...
-copy.title.multi=Copiar {0} elementos en...
+copy.node.unfiledroot=Documentos de archivo no archivados
+copy.title.single=Copiar ''{0}'' a...
+copy.title.multi=Copiar ''{0}'' elementos a...
 copy.button=Copiar
-copy.message.no-files=Debe proporcionarse al menos un fichero
-copy.message.please-wait=Se est\u00e1n copiando ficheros...
-copy.message.success={0} elementos copiados correctamente
-copy.message.failure=No se pudieron copiar los eventos
+copy.message.no-files=Al menos debe proporcionarse un fichero
+copy.message.please-wait=Copiando ficheros...
+copy.message.success=Se copiaron ''{0}'' elementos correctamente
+copy.message.failure=No se pudieron copiar los elementos
 
 ## Move To
 move.node.root=Plan de ficheros
-move.title.single=Mover {0} a...
-move.title.multi=Mover {0} elementos a...
+move.node.unfiledroot=Documentos de archivo no archivados
+move.title.single=Mover ''{0}'' a...
+move.title.multi=Mover ''{0}'' elementos a...
 move.button=Mover
-move.message.no-files=Debe proporcionarse al menos un fichero
+move.message.no-files=Al menos debe proporcionarse un fichero
 move.message.please-wait=Moviendo ficheros...
-move.message.success={0} elementos movidos correctamente
-move.message.failure=No se pudieron copiar los elementos
+move.message.success=Se movieron ''{0}'' elementos correctamente
+move.message.failure=No se pudieron mover los elementos
 
 ## Link To
 link.node.root=Plan de ficheros
-link.title.single=Enlazar {0} a...
-link.title.multi=Enlazar {0} elementos a...
-link.button=Enlace
-link.message.no-files=Debe proporcionarse al menos un fichero
-link.message.please-wait=Se est\u00e1n enlazando ficheros...
-link.message.success={0} elementos enlazados correctamente
+link.node.unfiledroot=Documentos de archivo no archivados
+link.title.single=Enlace ''{0}'' a...
+link.title.multi=Enlazar ''{0}'' elementos a...
+link.button=Enlazar
+link.message.no-files=Al menos debe proporcionarse un fichero
+link.message.please-wait=Enlazando ficheros...
+link.message.success=Se duplicaron ''{0}'' elementos correctamente.
 link.message.failure=No se pudieron enlazar los elementos
 
 ## File To
 file.node.root=Plan de ficheros
-file.title.single=Archivar {0} en...
-file.title.multi=Archivar {0} elementos en...
-file.button=Archivo
-file.message.no-files=Debe proporcionarse al menos un fichero
-file.message.please-wait=Se est\u00e1n archivando ficheros...
-file.message.success={0} elementos archivados correctamente
+file.node.unfiledroot=Documentos de archivo no archivados
+file.title.single=Archivar ''{0}'' a...
+file.title.multi=Archivar ''{0}'' elementos a...
+file.button=Fichero
+file.message.no-files=Al menos debe proporcionarse un fichero
+file.message.please-wait=Archivando ficheros...
+file.message.success=Se duplicaron ''{0}'' elementos correctamente
 file.message.failure=No se pudieron archivar los elementos
