--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/modules/documentlibrary/file-report.get_es.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/modules/documentlibrary/file-report.get_es.properties
@@ -1,9 +1,7 @@
-header=Seleccionar la carpeta de archivos de destino
-
+header=Seleccionar la carpeta de documentos de archivo de destino
 node.root=Plan de ficheros
-title.single=Informe de transferencia de ficheros {0} en...
-button.file=Informe de fichero
-message.no-files=Debe proporcionarse al menos un fichero
-message.please-wait=Archivando informe de transferencia...
-message.success=Informe de transferencia archivado correctamente como {0} 
-message.failure=No se ha podido completar la operaci\u00f3n de archivado
+title.single=Archivar informe a...
+button.file=Archivar informe
+message.no-files=Al menos debe proporcionarse un fichero
+message.please-wait=Archivando informe...
+label.unfiled-records=Archivar informe a "Documentos de archivo no archivados"
